deployments.yaml
#Commands
$ kubectl create -f docs/user-guide/nginx-deployment.yaml --record

$ kubectl get deployments

$ kubectl rollout status deployment/nginx-deployment

$ kubectl get rs

$ kubectl get pods --show-labels

$ kubectl set image deployment/nginx-deployment nginx=nginx:1.9.1

$ kubectl edit deployment/nginx-deployment

$ kubectl rollout status deployment/nginx-deployment

$ kubectl rollout history deployment/nginx-deployment

$ kubectl rollout undo deployment/nginx-deployment

$ kubectl rollout undo deployment/nginx-deployment --to-revision=2

$ kubectl scale deployment nginx-deployment --replicas=10

$ kubectl autoscale deployment nginx-deployment --min=10 --max=15 --cpu-percent=80

$ kubectl rollout pause deployment/nginx-deployment

$ kubectl set image deploy/nginx-deployment nginx=nginx:1.9.1

$ kubectl rollout history deploy/nginx-deployment

$ kubectl set resources deployment nginx -c=nginx --limits=cpu=200m,memory=512Mi

$ kubectl rollout resume deploy/nginx-deployment


apiVersion: apps/v1beta1 # for versions before 1.6.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.7.9
          ports:
            - containerPort: 80
