endpoints.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: my-service
subsets:
  - addresses:
  - ip: 1.2.3.4
    ports:
      - port: 9376

apiVersion: v1
kind: Endpoints
metadata:
     name: custom-service
subsets:
- addresses:
     - ip: <X.X.X.X>
     ports:
          - name: http
          port: 80
          protocol: TCP
